--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -78,17 +78,13 @@
     <div class="row">
 
         <div class="col-md-6 col-md-offset-3">
-            <h2>Please Sign In: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJobFlex <span class="glyphicon glyphicon-sunglasses"></span></h2>
             <div class="panel panel-login">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-xs-4">
-                            <a href="#" class="active" id="login-form-link">Login</a>
-                        </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6">
                             <a href="#" id="candidate-register-form-link">Register as Candidate</a>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6">
                             <a href="#" id="company-register-form-link">Register as Company</a>
                         </div>
                     </div>
@@ -101,40 +97,13 @@
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="col-xs-6">
-                                            <div class="well">
-                                                <form id="loginForm" method="POST" action="/login/" novalidate="novalidate">
-                                                    <div class="form-group">
-                                                        <label for="username" class="control-label">Username</label>
-                                                        <input type="text" class="form-control" id="loginusername" name="username" value="" required="" title="Please enter you username" placeholder="example@gmail.com">
-                                                        <span class="help-block"></span>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label for="password" class="control-label">Password</label>
-                                                        <input type="password" class="form-control" id="loginpassword" name="password" value="" required="" title="Please enter your password">
-                                                        <span class="help-block"></span>
-                                                    </div>
-                                                    <div id="loginErrorMsg" class="alert alert-error hide">Wrong username og password</div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" name="remember" id="remember"> Remember login
-                                                        </label>
-                                                        <p class="help-block">(if this is a private computer)</p>
-                                                    </div>
-                                                    <button type="submit" onClick="location.href='flat_user_profile_ui.html'" class="btn btn-success btn-block">Login</button>
-                                                    <div class="text-center">
-                                                        <a href="https://www.youtube.com/watch?v=0xojO-4VFPw" tabindex="5" class="forgot-password">Forgot Password?</a>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <p class="lead">Sign in with your LinkedIn or Facebook account for quicker access!</p>
+                                            <p class="lead">Register with your LinkedIn or Facebook account for quicker access!</p>
                                             <div class="col-sm-4 social-buttons">
                                                 <a class="btn btn-block btn-social btn-linkedin" onclick="">
-                                                    <i class="fa fa-linkedin"></i> Sign in with LinkedIn
+                                                    <i class="fa fa-linkedin"></i> Register with LinkedIn
                                                 </a>
                                                 <a class="btn btn-block btn-social btn-facebook" onclick="">
-                                                    <i class="fa fa-facebook"></i> Sign in with Facebook
+                                                    <i class="fa fa-facebook"></i> Register with Facebook
                                                 </a>
                                             </div>
                                         </div>
@@ -151,9 +120,6 @@
                                     <input type="text" name="lastname" id="lasttname" tabindex="2" class="form-control" placeholder="Last Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="3" class="form-control" placeholder="Username" value="">
-                                </div>
-                                <div class="form-group">
                                     <input type="email" name="email" id="email" tabindex="4" class="form-control" placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
@@ -161,6 +127,12 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="6" class="form-control" placeholder="Confirm Password">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="school" id="school" tabindex="1" class="form-control" placeholder="School" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="major" id="major" tabindex="1" class="form-control" placeholder="Major" value="">
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
@@ -173,9 +145,6 @@
                             <form id="company-register-form" action="" method="post" role="form" style="display: none;">
                                 <div class="form-group">
                                     <input type="text" name="companyname" id="companyname" tabindex="1" class="form-control" placeholder="Company Name" value="">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" name="username" id="companyusername" tabindex="2" class="form-control" placeholder="Username" value="">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" name="email" id="companyemail" tabindex="3" class="form-control" placeholder="Email Address" value="">
@@ -201,5 +170,31 @@
         </div>
     </div>
 </div>
+<script>
+    //Test for registion tabs
+    $(function() {
+
+        $('#candidate-register-form-link').click(function(e) {
+            $("#candidate-register-form").delay(100).fadeIn(100);
+            $("#login-form").fadeOut(100);
+            $("#company-register-form").fadeOut(100);
+            $('#login-form-link').removeClass('active');
+            $('#company-register-form-link').removeClass('active');
+            $(this).addClass('active');
+            e.preventDefault();
+        });
+        $('#company-register-form-link').click(function(e) {
+            $("#company-register-form").delay(100).fadeIn(100);
+            $("#login-form").fadeOut(100);
+            $("#candidate-register-form").fadeOut(100);
+            $('#login-form-link').removeClass('active');
+            $('#candidate-register-form-link').removeClass('active');
+
+            $(this).addClass('active');
+            e.preventDefault();
+        });
+
+    });
+</script>
 </body>
 </html>
