--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
+    <title>Signup for JobFlex</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <script src="sortable-master/Sortable.js"></script>
@@ -120,24 +120,24 @@
                                     <input type="text" name="lastname" id="lasttname" tabindex="2" class="form-control" placeholder="Last Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" id="email" tabindex="4" class="form-control" placeholder="Email Address" value="">
+                                    <input type="text" name="school" id="school" tabindex="3" class="form-control" placeholder="School" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" tabindex="5" class="form-control" placeholder="Password">
+                                    <input type="text" name="major" id="major" tabindex="4" class="form-control" placeholder="Major" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="confirm-password" id="confirm-password" tabindex="6" class="form-control" placeholder="Confirm Password">
+                                    <input type="email" name="email" id="email" tabindex="5" class="form-control" placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="school" id="school" tabindex="1" class="form-control" placeholder="School" value="">
+                                    <input type="password" name="password" id="password" tabindex="6" class="form-control" placeholder="Password">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="major" id="major" tabindex="1" class="form-control" placeholder="Major" value="">
+                                    <input type="password" name="confirm-password" id="confirm-password" tabindex="7" class="form-control" placeholder="Confirm Password">
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                            <input type="submit" name="register-submit" id="register-submit" tabindex="8" class="form-control btn btn-register" value="Register Now">
                                         </div>
                                     </div>
                                 </div>
