Fixed company login
Its a hack but it works

--- a/views/companysignup.ejs
+++ b/views/companysignup.ejs
@@ -144,10 +144,10 @@
                             </form>
                             <form id="company-register-form" action="" method="post" role="form" style="display: none;">
                                 <div class="form-group">
-                                    <input type="text" name="companyname" id="companyname" tabindex="1" class="form-control" placeholder="Company Name" value="">
+                                    <input type="text" name="firstname" id="firstname" tabindex="1" class="form-control" placeholder="Company Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" id="companyemail" tabindex="3" class="form-control" placeholder="Email Address" value="">
+                                    <input type="email" name="email" id="email" tabindex="3" class="form-control" placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="password" id="companypassword" tabindex="4" class="form-control" placeholder="Password">
@@ -158,7 +158,7 @@
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                            <input type="submit" name="register-company-submit" id="register-company-submit" tabindex="6" class="form-control btn btn-register" value="Register Now">
                                         </div>
                                     </div>
                                 </div>
