--- a/views/companylogin.ejs
+++ b/views/companylogin.ejs
@@ -25,7 +25,7 @@
         <form action="/companylogin" method="post">
             <div class="form-group">
                 <label>Email</label>
-                <input type="text" class="form-control" name="companyemail">
+                <input type="text" class="form-control" name="email">
             </div>
             <div class="form-group">
                 <label>Password</label>
