--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -26,7 +26,7 @@
                 <div class="well profile">
                     <div class="col-sm-12">
                         <div class="col-xs-12 col-sm-8">
-                            <h2> <%=company.local.companyname%></h2>
+                            <h2> <%=user.local.firstname%></h2>
                         </div>
                         <div class="col-xs-12 col-sm-4 text-center">
                             <figure>
