--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -147,7 +147,7 @@
                                     <input type="text" name="companyname" id="companyname" tabindex="1" class="form-control" placeholder="Company Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" id="companyemail" tabindex="3" class="form-control" placeholder="Email Address" value="">
+                                    <input type="email" name="email" id="email" tabindex="3" class="form-control" placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="password" id="companypassword" tabindex="4" class="form-control" placeholder="Password">
