--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,6 +21,9 @@
 
     <style>
         body        { padding-top:80px; }
+        #usertype {
+            visibility: hidden;
+        }
     </style>
 </head>
 <body>
@@ -141,6 +144,9 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <input type="text" name="usertype" id="usertype" class="form-control" placeholder=""  value="candidate">
+                                </div>
                             </form>
                             <form id="company-register-form" action="" method="post" role="form" style="display: none;">
                                 <div class="form-group">
@@ -162,6 +168,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </form>
                         </div>
                     </div>
