Nav Bar Tweaked
tweaked for User side navigation and company side navigation

--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -6,10 +6,39 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
-        body        { padding-top:80px; word-wrap:break-word; }
+        body        {word-wrap:break-word; }
     </style>
 </head>
 <body>
+<!---------------- NAV BAR -------->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <span class="glyphicon glyphicon-sunglasses"></span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#">JobFlex</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/companyprofile">Home</a></li>
+                <li><a href="/candidateSearchresults">View Candidate Matches</a></li>
+                <li><a href="/editprofile">Edit Profile</a></li>
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<!---------------- NAV BAR END -------->
+
 <div class="container">
 
     <div class="page-header text-center">
@@ -35,7 +64,7 @@
                             </figure>
                         </div>
                     </div>
-
+                    <a href="/postJobs" class="btn btn-default"><span class="fa fa-user"></span> Post Jobs</a>
                     </div>
                     <div>
                         <br><br>
