--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -40,6 +40,36 @@
 <!-- HTML code from Bootply.com editor -->
 
 <body>
+
+<!---------------- NAV BAR -------->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <span class="glyphicon glyphicon-sunglasses"></span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#">JobFlex</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/profile">Home</a></li>
+                <li><a href="/searchresults">View Job Matches</a></li>
+                <li><a href="/editprofile">Edit Profile</a></li>
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<!---------------- NAV BAR END -------->
+
 <div class="container pull-left"  >
     <div class="row">
         <div class="col-md-7">
