--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,10 +6,39 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
-        body        { padding-top:80px; word-wrap:break-word; }
+        body        { word-wrap:break-word; }
     </style>
 </head>
 <body>
+<!---------------- NAV BAR -------->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <span class="glyphicon glyphicon-sunglasses"></span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#">JobFlex</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/profile">Home</a></li>
+                <li><a href="/jobsearchresults">View Job Matches</a></li>
+                <li><a href="/editprofile">Edit Profile</a></li>
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<!---------------- NAV BAR END -------->
+
 <div class="container">
 
     <div class="page-header text-center">
@@ -54,7 +83,7 @@
                     </div>
                     <div class="col-xs-12 divider text-center">
                         <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
-                            <a href="/editprofile" class="btn btn-default"><span class="fa fa-user"></span> Edit Profile</a>
+
                             <a href="/uploadres" class="btn btn-default"><span class="fa fa-user"></span> Upload Resume</a>
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
