Added buttons on Profile Pages (company and candidate)
Candidate
-Buttons to edit skills list and edit culture list

Company Profile
-Button to add job postings and edit job postings
-Button to edit culture list

--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -65,6 +65,8 @@
                         </div>
                     </div>
                     <a href="/postJobs" class="btn btn-default"><span class="fa fa-user"></span> Post Jobs</a>
+                    <a href="/editJobs" class="btn btn-default"><span class="fa fa-user"></span> Edit Job Postings</a>
+                    <a href="/companyCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Company Culture List</a>
                     </div>
                     <div>
                         <br><br>
