--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -85,6 +85,8 @@
                         <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
 
                             <a href="/uploadres" class="btn btn-default"><span class="fa fa-user"></span> Upload Resume</a>
+                            <a href="/candidateSkillsList" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
+                            <a href="/candidateCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
                             <div class="btn-group dropup btn-block">
@@ -92,6 +94,7 @@
                                     <li><a href="#"><span class="fa fa-envelope pull-right"></span> Send an email </a></li>
                                     <li><a href="#"><span class="fa fa-list pull-right"></span> Edit User Profile </a></li>
                                     <li><a href="#"><span class="fa fa-book pull-right"></span> Upload Resume </a></li>
+
                                 </ul>
 
                             </div>
