--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -56,6 +56,7 @@
                     <div class="col-sm-12">
                         <div class="col-xs-12 col-sm-8">
                             <h2> <%=user.local.companyname%></h2>
+                            <h2> <%=user.local.company.description%></h2>
                         </div>
                         <div class="col-xs-12 col-sm-4 text-center">
                             <figure>
