--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,8 +55,8 @@
                     <div class="well profile">
                         <div class="col-sm-12">
                             <div class="col-xs-12 col-sm-8">
-                                <h2><%=user.local.firstname%> <%=user.local.lastname%></h2>
-                                <p><strong>School: </strong> <%=user.local.school%> </p>
+                                <h2><%=user.local.candidate.firstname%> <%=user.local.candidate.lastname%></h2>
+                                <p><strong>School: </strong> <%=user.local.candidate.school%> </p>
                                 <p><strong>Hobbies: </strong> Read, out with friends, listen to music, draw and learn new things. </p>
                                 <p><strong>Top Skills: </strong>
                                     <span class="tags">Web Dev</span>
@@ -71,8 +71,8 @@
 
                                 </p>
                                 References:<br>
-                                <b>Proffesor Xavier: </b> "<%=user.local.firstname%> is a very good student"<br>
-                                <b>Bob Loblaw: </b> "<%=user.local.firstname%> is a very good at coding <br>
+                                <b>Proffesor Xavier: </b> "<%=user.local.candidate.firstname%> is a very good student"<br>
+                                <b>Bob Loblaw: </b> "<%=user.local.candidate.firstname%> is a very good at coding <br>
                             </div>
                             <div class="col-xs-12 col-sm-4 text-center">
                                 <figure>
