--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,11 +5,27 @@
     <title>Your Profile</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+    <script type="javascript">
+        var jobflex = angular.module("jobflex", []);
+
+        jobflex.controller("AppCtrl", function ($http) {
+            var app = this;
+
+            function loadUsers() {
+                $http.get("http://localhost:1343").success(function (users) {
+                    app.users = users;
+                })
+            }
+            loadUsers();
+        })
+    </script>
     <style>
         body        { word-wrap:break-word; }
     </style>
 </head>
-<body>
+<body ng-app="jobflex" ng-controller="AppCtrl as app">
 <!---------------- NAV BAR -------->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -84,7 +100,6 @@
                         <div class="col-xs-12 divider text-center">
                             <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
 
-                                <a href="/uploadres" class="btn btn-default"><span class="fa fa-user"></span> Upload Resume</a>
                                 <a href="/candidateSkillsList" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
                                 <a href="/candidateCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
                             </div>
@@ -103,37 +118,11 @@
 
                         </div>
 
-
-                        <!-- FACEBOOK INFORMATION -->
-                        <div class="col-sm-6">
-                            <div class="well">
-                                <h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
-
-                                <p>
-                                    <strong>id</strong>: <%= user.facebook.id %><br>
-                                    <strong>token</strong>: <%= user.facebook.token %><br>
-                                    <strong>email</strong>: <%= user.facebook.email %><br>
-                                    <strong>name</strong>: <%= user.facebook.name %>
-                                </p>
-
-                            </div>
-                        </div>
-
-                        <!-- LINKEDIN INFORMATION -->
-                        <div class="col-sm-6">
-                            <div class="well">
-                                <h3 class="text-primary"><span class="fa fa-linkedin"></span> LinkedIn</h3>
-
-                                <p>
-                                    <strong>id</strong>: <%= user.linkedin.id %><br>
-                                    <strong>token</strong>: <%= user.linkedin.token %><br>
-                                    <strong>email</strong>: <%= user.linkedin.email %><br>
-                                    <strong>name</strong>: <%= user.linkedin.name %>
-                                </p>
-
-                            </div>
-                        </div>
-
+                        <ul>
+                            <li ng-repeat="user in app.users">
+                                {{ user.local.firstname }}
+                            </li>
+                        </ul>
 
                         <div>
                             <br><br>
@@ -159,37 +148,6 @@
             <h1 style="text-align: left">Job Matches</h1>
             <h5>Earn Points by Applying!</h5>
             <hr style="border-width: 3px">
-        </td>
-
-        <td style="text-align: center;">
-            <a class="thumbnail" id="carousel-selector-0">
-                <img src="https://assets.dice.com/external/images/empLogos/66e8480fd50d60298e40d4695d74e937.jpg">
-
-            </a>
-        </td>
-
-        <td>
-            <a class="thumbnail" id="carousel-selector-1">
-                <img src="https://assets.dice.com/external/images/empLogos/b8e580d631966d9b28d518a37da2582d.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-2"><img src="http://assets.dice.com/external/images/grpLogos/1434744ejvImage.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-3"><img src="https://assets.dice.com/external/images/empLogos/32652largeLogo.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-4"><img src="http://assets.dice.com/external/images/grpLogos/287569ejvImage.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-5"><img src="https://assets.dice.com/external/images/empLogos/53f972166af28ff30a3c45a53d701ff8.gif"></a>
-        </td>
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-6"><img src="http://assets.dice.com/external/images/grpLogos/933829ejvImage.gif"></a>
         </td>
 
 
