--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -77,7 +77,50 @@
 
 </div>-->
 
-<div class="container">
+<<div class="container">
+        <div class="container">
+                <div class="jumbotron">
+                    <h1>Candidate Registration</h1>
+                    <p>Please enter your information to get started with JobFlex!</p>
+                    <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
+                    <div class="row">
+                            <form id="candidate-register-form" action="" method="post" role="form" style="display: block;">
+                                <div class="form-group">
+                                    <input type="text" name="firstname" id="firstname" tabindex="1" class="form-control" placeholder="First Name" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="lastname" id="lasttname" tabindex="2" class="form-control" placeholder="Last Name" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="school" id="school" tabindex="3" class="form-control" placeholder="School" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="major" id="major" tabindex="4" class="form-control" placeholder="Major" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" name="email" id="email" tabindex="5" class="form-control" placeholder="Email Address" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" tabindex="6" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="confirm-password" id="confirm-password" tabindex="7" class="form-control" placeholder="Confirm Password">
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-sm-offset-3">
+                                            <input type="submit" name="register-submit" id="register-submit" tabindex="8" class="form-control btn btn-register" value="Register Now">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                    </div>
+            </div>
+        </div>
+</div>
+
+
+<!--<div class="container">
     <div class="row">
 
         <div class="col-md-6 col-md-offset-3">
@@ -176,7 +219,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 <script>
     //Test for registion tabs
     $(function() {
