--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -2,14 +2,31 @@
 <!doctype html>
 <html>
 <head>
-    <title>Your Profile</title>
+    <title>Company Profile</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+    <script type="javascript">
+        var jobflex = angular.module("jobflex", []);
+
+        jobflex.controller("AppCtrl", function ($http) {
+            var app = this;
+
+            function loadUsers() {
+                $http.get("http://localhost:1343").success(function (users) {
+                    app.users = users;
+                })
+            }
+            loadUsers();
+        })
+    </script>
     <style>
-        body        {word-wrap:break-word; }
+        body        { word-wrap:break-word; }
     </style>
 </head>
-<body>
+<body ng-app="jobflex" ng-controller="AppCtrl as app">
+
 <!---------------- NAV BAR -------->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -30,14 +47,146 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/companyprofile">Home</a></li>
-                <li><a href="/candidateSearchresults">View Candidate Matches</a></li>
-                <li><a href="/editprofile">Edit Profile</a></li>
+                <li><a href="/jobsearchresults">View Candidate Matches</a></li>
+                <li><a href="/editcompanyprofile">Edit Company Profile</a></li>
             </ul>
 
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
 <!---------------- NAV BAR END -------->
+
+<div class="container">
+
+    <div class="page-header text-center">
+        <h1><span class="fa fa-suitcase"></span> Company Page</h1>
+        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+    </div>
+
+    <div class="row">
+
+        <div class="container pull-left">
+            <h3>Company Profile</h3>
+            <div class="row pull-left">
+                <div class="col-md-offset-0 col-md-12 col-lg-offset-0 col-lg-12">
+                    <div class="well profile">
+                        <div class="col-sm-12">
+                            <div class="col-xs-12 col-sm-8">
+                                <h2><%=user.local.companyname%> </h2>
+                                <p><strong>Address: </strong> <%=user.local.company.address%> </p>
+                                <p><strong>City: </strong> <%=user.local.company.city%> </p>
+                                <p><strong>State: </strong> <%=user.local.company.state%> </p>
+                                <p><strong>Email: </strong> <%=user.local.company.email%> </p>
+                                <p><strong>Webpage: </strong> <%=user.local.company.webpage%> </p>
+                                <p><strong>Culture: </strong>
+                                    <span class="tags2">Team Leader,</span>
+                                    <span class="tags2">Creative,</span>
+                                    <span class="tags2">People Skills</span>
+
+                                </p>
+                                Reviews:<br>
+                                <b>Student Bill: </b> "<%=user.local.companyname%> is a fun place to work!"<br>
+                                <b>Student Jane: </b> "At <%=user.local.companyname%> I learned so much!" <br>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 text-center">
+                                <figure>
+                                    <img src="http://www.kigurumionline.org/gallery/images/gallerySmallPlaceholder.png" alt="" class="img-square img-responsive">
+
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 divider text-center">
+                            <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
+
+                                <a href="/candidateSkillsList" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
+                                <a href="/candidateCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
+                                <div class="btn-group dropup btn-block">
+                                    <ul class="dropdown-menu text-left" role="menu">
+                                        <li><a href="#"><span class="fa fa-envelope pull-right"></span> Send an email </a></li>
+                                        <li><a href="#"><span class="fa fa-list pull-right"></span> Edit Company Profile </a></li>
+                                        <li><a href="#"><span class="fa fa-book pull-right"></span> Upload Resume </a></li>
+
+                                    </ul>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!--<ul>-->
+                            <!--<li ng-repeat="user in app.users">-->
+                                <!--{{ user.local.companyname }}-->
+                            <!--</li>-->
+                        <!--</ul>-->
+
+                        <div>
+                            <br><br>
+
+                            <div class="form-group">
+
+                                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                <!--<label for="email">Introduction:</label>-->
+                                <input type="email" class="form-control" id="ref" placeholder="Can you write a review?">
+                            </div>
+                            <button type="button" class="btn btn-block">Ask for more reviews!</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+</body>
+</html>
+
+
+<!--
+ views/profile.ejs
+<!doctype html>
+<html>
+<head>
+    <title>Your Profile</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <style>
+        body        {word-wrap:break-word; }
+    </style>
+</head>
+<body>
+&lt;!&ndash;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; NAV BAR &#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        &lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;
+        <div class="navbar-header">
+            <span class="glyphicon glyphicon-sunglasses"></span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#">JobFlex</a>
+        </div>
+
+        &lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/companyprofile">Home</a></li>
+                <li><a href="/candidateSearchresults">View Candidate Matches</a></li>
+                <li><a href="/editprofile">Edit Profile</a></li>
+            </ul>
+
+        </div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;
+    </div>&lt;!&ndash; /.container-fluid &ndash;&gt;
+</nav>
+&lt;!&ndash;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; NAV BAR END &#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;
 
 <div class="container">
 
@@ -85,4 +234,4 @@
 </div>
 
 </body>
-</html>
+</html>-->
