Candidates and companies can all login (locally) and signup. Made multiple changes to config/passport.js to allow for signup of user and company. Changed app/routes.js to call the proper strategies for company login and signup. Created app/models/job.js for job listing schema. Added revised export statements to all of the models, which may allow for easier connectivity. *****All users and companies that have been created have passwords of '123' and '1234' respectively.

--- a/views/companysignup.ejs
+++ b/views/companysignup.ejs
@@ -92,7 +92,7 @@
                         <input type="email" name="email" id="email" tabindex="3" class="form-control" placeholder="Email Address" value="">
                     </div>
                     <div class="form-group">
-                        <input type="password" name="password" id="companypassword" tabindex="4" class="form-control" placeholder="Password">
+                        <input type="password" name="compassword" id="compassword" tabindex="4" class="form-control" placeholder="Password">
                     </div>
                     <div class="form-group">
                         <input type="password" name="confirm-password" id="company-confirm-password" tabindex="5" class="form-control" placeholder="Confirm Password">
