--- a/views/companylogin.ejs
+++ b/views/companylogin.ejs
@@ -24,7 +24,7 @@
         <!-- LOGIN FORM -->
         <form action="/companylogin" method="post">
             <div class="form-group">
-                <label>Email</label>
+                <label>Company Name</label>
                 <input type="text" class="form-control" name="companyname">
             </div>
             <div class="form-group">
