--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -57,6 +57,8 @@
                         <div class="col-xs-12 col-sm-8">
                             <h2> <%=user.local.companyname%></h2>
                             <h2> <%=user.local.company.description%></h2>
+                            <!--Can query from Company collection now-->
+                             <h2> <%=company.companyname%></h2>
                         </div>
                         <div class="col-xs-12 col-sm-4 text-center">
                             <figure>
