--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,22 +5,11 @@
     <title>Your Profile</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script>
 
-    <script type="javascript">
-        var jobflex = angular.module("jobflex", []);
+</script>
 
-        jobflex.controller("AppCtrl", function ($http) {
-            var app = this;
-
-            function loadUsers() {
-                $http.get("http://localhost:1343").success(function (users) {
-                    app.users = users;
-                })
-            }
-            loadUsers();
-        })
-    </script>
     <style>
         body        { word-wrap:break-word; }
     </style>
@@ -117,15 +106,8 @@
                             </div>
 
                         </div>
-
-                        <ul>
-                            <li ng-repeat="user in app.users">
-                                {{ user.local.firstname }}
-                            </li>
-                        </ul>
-
                         <div>
-                            <br><br>
+
 
                             <div class="form-group">
 
@@ -142,47 +124,19 @@
         </div>
     </div>
 
-    <div class="col-sm-2 "  >
+    <div class="col-sm-6 "  >
 
-        <td class="col-sm-2">
+        <td class="col-sm-6">
             <h1 style="text-align: left">Job Matches</h1>
             <h5>Earn Points by Applying!</h5>
             <hr style="border-width: 3px">
         </td>
 
-<<<<<<< Updated upstream
-=======
-        <td style="text-align: center;">
-            <a class="thumbnail" id="carousel-selector-0">
-                <img src="https://assets.dice.com/external/images/empLogos/66e8480fd50d60298e40d4695d74e937.jpg">
 
-            </a>
-        </td>
+        <% for(var i=0; i<company.length; i++) {%>
+        <li><b><%= company[i].companyname %></b> : <%= company[i].description %></li>
+        <% } %>
 
-        <td>
-            <a class="thumbnail" id="carousel-selector-1">
-                <img src="https://assets.dice.com/external/images/empLogos/b8e580d631966d9b28d518a37da2582d.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-2"><img src="http://assets.dice.com/external/images/grpLogos/1434744ejvImage.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-3"><img src="https://assets.dice.com/external/images/empLogos/32652largeLogo.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-4"><img src="http://assets.dice.com/external/images/grpLogos/287569ejvImage.gif"></a>
-        </td>
-
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-5"><img src="https://assets.dice.com/external/images/empLogos/53f972166af28ff30a3c45a53d701ff8.gif"></a>
-        </td>
-        <td class="col-sm-12">
-            <a class="thumbnail" id="carousel-selector-6"><img src="http://assets.dice.com/external/images/grpLogos/933829ejvImage.gif"></a>
-        </td>
->>>>>>> Stashed changes
 
     </div>
 
