Updated Fields in Registrations

--- a/views/companysignup.ejs
+++ b/views/companysignup.ejs
@@ -89,18 +89,24 @@
                         <input type="text" name="companyname" id="companyname" tabindex="1" class="form-control" placeholder="Company Name" value="">
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" id="email" tabindex="3" class="form-control" placeholder="Email Address" value="">
+                        <input type="email" name="email" id="email" tabindex="2" class="form-control" placeholder="Email Address" value="">
                     </div>
                     <div class="form-group">
-                        <input type="password" name="compassword" id="compassword" tabindex="4" class="form-control" placeholder="Password">
+                        <input type="address" name="address" id="address" tabindex="3" class="form-control" placeholder="Address" value="">
                     </div>
                     <div class="form-group">
-                        <input type="password" name="confirm-password" id="company-confirm-password" tabindex="5" class="form-control" placeholder="Confirm Password">
+                        <input type="webpage" name="webpage" id="webpage" tabindex="4" class="form-control" placeholder="Webpage" value="">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="compassword" id="compassword" tabindex="5" class="form-control" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="confirm-password" id="company-confirm-password" tabindex="6" class="form-control" placeholder="Confirm Password">
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
-                                <input type="submit" name="register-submit" id="company-register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                <input type="submit" name="register-submit" id="company-register-submit" tabindex="7" class="form-control btn btn-register" value="Register Now">
                             </div>
                         </div>
                     </div>
