--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -215,7 +215,7 @@
                             </figure>
                         </div>
                     </div>
-                    <a href="/postJobs" class="btn btn-default"><span class="fa fa-user"></span> Post Jobs</a>
+                    <a href="/jobpost" class="btn btn-default"><span class="fa fa-user"></span> Post Jobs</a>
                     <a href="/editJobs" class="btn btn-default"><span class="fa fa-user"></span> Edit Job Postings</a>
                     <a href="/companyCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Company Culture List</a>
                     </div>
