--- a/views/jobpost.ejs
+++ b/views/jobpost.ejs
@@ -18,12 +18,6 @@
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script language="JavaScript" type="text/javascript" src="public/registrationJS.js"></script>
 
-    <style>
-        body        { padding-top:80px; }
-        #usertype {
-            visibility: hidden;
-        }
-    </style>
 </head>
 <body>
 
@@ -60,8 +54,8 @@
 <<div class="container">
     <div class="container">
         <div class="jumbotron">
-            <h1>Candidate Registration</h1>
-            <p>Please enter your information to get started with JobFlex!</p>
+            <h1>Post A New Job!</h1>
+            <p>Enter a Job!</p>
             <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
             <div class="row">
                 <form id="candidate-register-form" action="" method="post" role="form" style="display: block;">
@@ -74,7 +68,6 @@
                     <div class="form-group">
                         <input type="text" name="jobtitle" id="jobtitle" tabindex="2" class="form-control" placeholder="Job Title" value="">
                     </div>
-
                     <div class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Job Type
                             <span class="caret"></span></button>
@@ -85,9 +78,25 @@
                         </ul>
                     </div>
                     <div class="form-group">
+                        <input type="text" name="jobdescription" id="jobdesc" tabindex="2" class="form-control" placeholder="Job Description" value="">
+                    </div>
+
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Job Category
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Computer Science</a></li>
+                            <li><a href="#">Mathematics</a></li>
+                            <li><a href="#">Technology</a></li>
+                        </ul>
+                    </div>
+
+
+
+                    <div class="form-group">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
-                                <input type="submit" name="register-submit" id="register-submit" tabindex="8" class="form-control btn btn-register" value="Register Now">
+                                <input type="submit" name="postjob" id="postjob" tabindex="8" class="form-control btn btn-register" value="Post Job!">
                             </div>
                         </div>
                     </div>
@@ -96,6 +105,3 @@
         </div>
     </div>
 </div>
-
-
-</body>
