Added links to sort lists from respective profile pages
CSS/Javascript does not work for sort lists. Attempting to resolve
issue.

--- a/views/candidateSkillsSort.ejs
+++ b/views/candidateSkillsSort.ejs
@@ -9,7 +9,7 @@
     <!-- SORT LIST CSS -->
     <link href="http://rubaxa.github.io/Ply/ply.css" rel="stylesheet" type="text/css"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css"/>
-    <link href="sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
+    <link href="/views/css/sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
@@ -46,12 +46,12 @@
 </div>
 
 <!----- SORTS JS ------>
-<script src="sortable-master/Sortable.js"></script>
+<script src="/views/css/sortable-master/Sortable.js"></script>
 <script src="http://rubaxa.github.io/Ply/Ply.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-<script src="sortable-master/ng-sortable.js"></script>
+<script src="/views/css/sortable-master/ng-sortable.js"></script>
 
-<script src="sortable-master/st/app.js"></script>
+<script src="/views/css/sortable-master/st/app.js"></script>
 
 <hr>
 
