--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -98,8 +98,7 @@
                         <div class="col-xs-12 divider text-center">
                             <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
 
-                                <a href="/candidateSkillsList" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
-                                <a href="/candidateCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
+                                <a href="/companyCultureSort" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
                                 <div class="btn-group dropup btn-block">
@@ -222,7 +221,6 @@
                     <div>
                         <br><br>
 
-
                 </div>
             </div>
         </div>
@@ -235,8 +233,6 @@
 </div>
 
 </body>
-<<<<<<< HEAD
-</html>-->
-=======
+
 </html>
->>>>>>> origin/master
+
