--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -89,8 +89,8 @@
                         <div class="col-xs-12 divider text-center">
                             <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
 
-                                <a href="/candidateSkillsList" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
-                                <a href="/candidateCultureList" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
+                                <a href="/candidateSkillsSort" class="btn btn-default"><span class="fa fa-user"></span> Edit Skills List</a>
+                                <a href="/candidateCultureSort" class="btn btn-default"><span class="fa fa-user"></span> Edit Culture List</a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-6 col-lg-offset-0 col-lg-6">
                                 <div class="btn-group dropup btn-block">
