--- a/views/companylogin.ejs
+++ b/views/companylogin.ejs
@@ -24,8 +24,8 @@
         <!-- LOGIN FORM -->
         <form action="/companylogin" method="post">
             <div class="form-group">
-                <label>Company Name</label>
-                <input type="text" class="form-control" name="companyname">
+                <label>Email</label>
+                <input type="text" class="form-control" name="email">
             </div>
             <div class="form-group">
                 <label>Password</label>
